syntax = "proto3";

package rivet.backend.pkg.faker.mm_player;

import "legacy/proto/common.proto";

message Request {
	rivet.common.Uuid namespace_id = 1;
	rivet.common.Uuid lobby_id = 2;
}

message Response {
	rivet.common.Uuid player_id = 1;
	string player_token = 2;
	rivet.common.Uuid token_session_id = 3;
}
